# pepper-visual-servoing

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  qiproject.xml
cmake/: pepper_visp.cmake  vp_pepper_visp_config.h.cmake.in
config/: blobs_tracker_servo.yaml  camera_kVGA.xml  face_tracker_servo.yaml  face_tracker_servo_area.yaml  face_tracker_servo_rgbd.yaml  pepper_cameras.xml  pepper_forehead_camera_kQVGA.xml  pepper_vs_chin_config.yaml  pepper_vs_forehead_config.yaml
data/: greenbox.cao  greenbox.init  velocity-log-motion-x-axis.m  velocity-log-no-motion.m
doc/: Makefile  content.tex  documentation.tex  title.tex
include/pepper-visp/: blobs_with_depth_task.h  blobs_with_depth_tracker.h  face_tracker.h  face_with_depth_task.h  frame_aligner_task.h  model_based_tracker.h  people_detector.h  pepper_visp.h  vp_pepper_visp_config.h
pepper-visp/: CMakeLists.txt  blob_tracker_servo.cpp  blobs_tracker_servo.cpp  blobs_with_depth_task.h  blobs_with_depth_tracker.h  face_tracker.h  face_tracker_servo.cpp  face_with_depth_task.h  four_blobs_pattern_tracker.h  frame_aligner_task.h  model_based_tracker.h  model_based_tracker_servo.cpp  people_detector.h  pepper_visp.h  vp_pepper_visp_config.h
src/: CMakeLists.txt  blobs_tracker_servo.cpp  face_tracker_servo.cpp  face_tracker_servo_area.cpp  face_tracker_servo_rgbd.cpp  model_based_tracker_servo.cpp
